
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.95

   * fixed nonbonded detection problem with discrete objects

   * fixed serious bug with "state" selection operator and discrete objects.

   * improved ray-tracer's ability to handle multiple transparent objects

   * "Virtual trackball" toggle now in menu

   * added variety of new functionality to pop-up menus

   * fixed segmentation fault bug in atom picking (only seen on Mac?)

   * much-improved support for raytracing of large structures;
     various bugs fixed

   * fixed memory management issues on OS-X

   * endianness check for .phi files 

   * test cases updated to reflect new molecular editing behavior

   * default arguments (and behavior) changed for dist and bond commands

   * pdb_standard_order now default on

   * textual button mode indicator, more button changes...

   * ray-tracing of RGBA pixmap text now supported FINALLY.

   * pk1-4 now have different visual representations...

   * fixed hydrogen adding for amides/ureas

   * changed PyMOL file output to comply with PDB standards with respect
     to placement of the atomic symbol in the atom name field

   * overhauled C0700 test case

   * pdb_reformat_names_mode setting (for PDB and AMBER conversions)

   * appearance wizard

   * toggle command
 
   * virtual_trackball setting

   * many new menus to support viewer pop-up actions

   * pop-up menus in viewer

   * cascading pop-up menus
   
   * made spheres pickable

   * made cartoons pickable using pickable CGOs : )))

   * finally fixed visible operator to behave as expected

   * massive overhaul of user interface appearance

   * double-clicking actions
