@@ -626,19 +626,24 @@ void PopUpDraw(Block *block)
 
           if(I->Sub[a]) {
 
-            glColor3f(0.0F,0.0F,0.0F);
             
             glBegin(GL_POLYGON);
-            glVertex2i(I->Block->rect.left-1,y+1);
+            glColor3f(0.4F,0.4F,0.6F);
+            glVertex2i(I->Block->rect.left-2,y+1);
+            glColor3f(0.1F,0.1F,0.2F);
             glVertex2i(I->Block->rect.left,y+1);
             glVertex2i(I->Block->rect.left,y+((cPopUpLineHeight))-4);
-            glVertex2i(I->Block->rect.left-1,y+((cPopUpLineHeight))-4);
+            glColor3f(0.4F,0.4F,0.6F);
+            glVertex2i(I->Block->rect.left-2,y+((cPopUpLineHeight))-4);
             glEnd();
             
             glBegin(GL_POLYGON);
+            glColor3f(0.1F,0.1F,0.2F);
             glVertex2i(I->Block->rect.right,y+1);
-            glVertex2i(I->Block->rect.right+1,y+1);
-            glVertex2i(I->Block->rect.right+1,y+((cPopUpLineHeight))-4);
+            glColor3f(0.4F,0.4F,0.6F);
+            glVertex2i(I->Block->rect.right+2,y+1);
+            glVertex2i(I->Block->rect.right+2,y+((cPopUpLineHeight))-4);
+            glColor3f(0.1F,0.1F,0.2F);
             glVertex2i(I->Block->rect.right,y+((cPopUpLineHeight))-4);
             glEnd();
 
